# reuters-summaries

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/raw/raw_articles.parquet/: _common_metadata  _metadata
data/raw/raw_articles.parquet/date=20231110/: part.0.parquet
runners/: step_0_scraper.py  step_1_generate_summaries.py
src/: config.py  scraper.py  utils.py
src/reuters_summary/: step_0_scraper.py  step_1_generate_summaries.py
