[tool.poetry]
name = "reuters_summary"
description = "Reuters summary project"
version = "0.1.0"
authors = ["arctickey <ffilipchrzuszcz1@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.2"
newspaper3k = "^0.2.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

