[tool.poetry]
name = "reuters_summary"
description = "Reuters summary project"
version = "0.1.0"
authors = ["arctickey <ffilipchrzuszcz1@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.2"
newspaper3k = "^0.2.8"
fastparquet = "^2023.10.1"
transformers = "^4.35.2"
sentencepiece = "^0.1.99"
protobuf = "^4.25.1"
torch = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"
ipykernel = "^6.26.0"
